PR/43981: Aleksey Cheusov: awk too small limit on number -f options remove the limit should we pullup to 5.x?